--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,12 +14,11 @@
     </header>
 
     <nav>               
-        <a href="index.html">Inicio</a>
-        <a href="productos.html">Productos</a>
-        <a href="ofertas.html">Ofertas</a>
-        <a href="carrito.html">Carrito</a>
-        <a href="contacto.html">Contacto</a>
-        <a href="login.html">Iniciar Sesión</a>          
+        <a href="../index.html">Inicio</a>
+        <a href="./productos.html">Productos</a>
+        <a href="./carrito.html">Carrito</a>
+        <a href="./contacto.html">Contacto</a>
+        <a href="./login.html">Iniciar Sesión</a>          
     </nav>
 
     <main>
