--- a/pages/login.html
+++ b/pages/login.html
@@ -11,11 +11,11 @@
         <h1>Gringo's Online</h1>
     </header>
         <nav>
-        <a href="index.html">Inicio</a>
-        <a href="productos.html">Productos</a>
-        <a href="carrito.html">Carrito</a>
-        <a href="contacto.html">Contacto</a>
-        <a href="login.html">Iniciar Sesión</a>
+        <a href="../index.html">Inicio</a>
+        <a href="./productos.html">Productos</a>
+        <a href="./carrito.html">Carrito</a>
+        <a href="./contacto.html">Contacto</a>
+        <a href="./login.html">Iniciar Sesión</a>
     </nav>
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
