correción btn vaciar-carrito, se agrega pop-up personalizado

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -29,7 +29,7 @@
 
     <div id="total-carrito" style="margin-top: 1rem; font-weight: bold;"></div>
 
-    <button id="btn-vaciar-carrito" style="margin-top: 1.5rem;">Vaciar carrito</button>
+    <button id="btn-vaciar-carrito">Vaciar carrito</button>
   </main>
 
   <footer>
