--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <div id="contenedor-ofertas" class="productos-grid">
       <!-- Aquí podrías dejar algunas ofertas fijas o dinámicas -->
     </div>
+
+    <!-- Contenedor del Pop-up -->
+    <div id="custom-popup" class="modal-overlay">
+        <div class="modal-content">
+            <p class="modal-message">Producto agregado al carrito</p>
+            <button id="close-popup-btn" class="modal-button">Aceptar</button>
+        </div>
+    </div>
+
   </main>
 
   <footer>
@@ -31,5 +40,6 @@
   </footer>
 
   <script src="./js/script.js"></script>
+  
 </body>
 </html>
