--- a/pages/productos.html
+++ b/pages/productos.html
@@ -36,6 +36,18 @@
         <!-- Productos cargados dinámicamente -->
       </div>
     </section>
+
+    
+<!-- Contenedor del pop-up (oculto por defecto) -->
+  <div id="custom-popup" class="modal-overlay">
+      <div class="modal-content">
+          <p class="modal-message">Producto agregado al carrito</p>
+          <button id="close-popup-btn" class="modal-button">Aceptar</button>
+  </div>
+
+
+</div>
+
   </main>
 
   <footer>
